@@ -883,9 +883,10 @@ int mosquitto_loop_forever(struct mosquitto *mosq, int timeout, int max_packets)
 		}else{
 			pthread_mutex_unlock(&mosq->state_mutex);
 
-			reconnect_delay = mosq->reconnect_delay;
 			if(reconnect_delay > 0 && mosq->reconnect_exponential_backoff){
-				reconnect_delay *= mosq->reconnect_delay*reconnects*reconnects;
+				reconnect_delay = mosq->reconnect_delay*reconnects*reconnects;
+			}else{
+				reconnect_delay = mosq->reconnect_delay;
 			}
 
 			if(reconnect_delay > mosq->reconnect_delay_max){
